--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,13 @@
     --h1-font-size: 56px;
     --font-fmaily: 'Libre Baskerville', serif;
   }
-
+/* --------common style Start----------- */
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-/* common style start */
 .container{
     width: 75%;
     margin: auto;
@@ -29,6 +28,9 @@ a{
     color: white;
     font-size: 16px;
 }
+nav a:hover{
+    color: rgb(4, 100, 100);
+}
 p{
     font-size: 16px;
     color: #6C6C6C;
@@ -38,22 +40,27 @@ button{
     margin: 30px 10px;
     padding:11px 20px;
     color: white;
-    transition: .3s linear;
+    transition: all .3s linear;
     border: none;
 }
 button:hover{
     color: black;
     background-color: #fff;
     transform: scale(1.3);
+    cursor: pointer;
 }
-
-/* common style end*/
-/* Header area start*/
+/* --------common style end----------- */
+/* --------Header area Start----------- */
 .header-area{
     background-color:rgb(6, 6, 75);
     height: 677px;
     width: 100%;
     background-size: cover;
+}
+.navbar{
+    color: white;
+    font-size: 24px;
+    display: none;
 }
 nav{
     display: flex;
@@ -78,7 +85,6 @@ li{
     width: 50%;
     color: #E02C6D;
 }
-
 span{
     color: white;
     font-family: var(--font-fmaily);
@@ -93,9 +99,9 @@ span{
 .content-img img:hover{
     transform: scale(1.3);
 }
-/* Header area end*/
+/* --------Header area end----------- */
 
-/* tpo player section  start*/
+/* --------tpo player section  Start----------- */
 .top-players h1{
     margin-top: 70px;
     margin-bottom: 30px;
@@ -113,10 +119,9 @@ span{
     padding: 15px 15px 30px 15px;
     box-shadow: 0 0 30px #ccc;
 }
+/* --------tpo player section  End----------- */
 
-/* tpo player section  end*/
-
-/* ------------------ */
+/* --------Team start----------- */
 .best-team{
     background-color: rgb(221, 222, 231);
     padding: 30px 0px;
@@ -140,14 +145,14 @@ span{
     margin: auto;
     box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #ccc;
 }
+/* ------------team End----------- */
 
-
-/* ------------------- */
+/* --------Footer start----------- */
 footer{
     margin: 100px 0px 60px 0px;
 }
 .logo{
-    width: 450px;
+    width: 460px;
     margin: auto;
     margin-bottom: 45px;
 }
@@ -172,24 +177,24 @@ footer p{
     text-align: center;
     color: black;
 }
-
-/* Media query start*/
-@media (max-width: 1100px) {
-    .btn{
-        display: none;
+/* --------Footer End----------- */
+/* --------Media query start----------- */
+@media (min-width: 767px) and (max-width: 1024px){
+    h1{
+        font-size: 46px;
     }
 }
-
-  @media (min-width: 767px) and (max-width: 1023px) {
+@media (min-width: 482px) and (max-width: 768px) {
+    .header-area{
+        height: 450px;
+    }
     h1{
         font-size: 35px;
     }
     .content{
-        margin-top: 120px;
         width: 100%;
     }
     .content-img{
-        margin-top: 50px;
         width: 100%;
     }
     .plyer-group{
@@ -198,17 +203,22 @@ footer p{
     .team{
         grid-template-columns: repeat(1, 1fr);
     }
+    .after-content{
+        order: 2;
+    }
+    .before-img{
+        margin-top: 20px;
+        order: 1;
+    }
+    button{
+        border-radius: 50px;
+    }
     .btn{
         display: none;
     }
   }
   
-  /* 
-    ##Device = Most of the Smartphones Mobiles (Portrait)
-    ##Screen = B/w 320px to 479px
-  */
-  
-  @media (min-width: 100px) and (max-width: 768px) {
+  @media (min-width: 100px) and (max-width: 481px) {
     .container{
         width: 85%;
     }
@@ -216,10 +226,15 @@ footer p{
         margin: 0;
         padding: 0;
     }
-    .btn{
-        display: none;
+    .navbar{
+        line-height: 100px;
+        display: block;
     }
-    nav{
+    button{
+        border-radius: 12px 0px 12px 0px;
+        padding: 7px 15px;
+    }
+    ul{
         display: none;
     }
     h1{
@@ -230,11 +245,9 @@ footer p{
         flex-direction: column;
     }
     .content{
-        margin-top: 120px;
         width: 100%;
     }
     .content-img{
-        margin-top: 50px;
         width: 100%;
     }
     .plyer-group{
@@ -243,13 +256,20 @@ footer p{
     .team{
         grid-template-columns: repeat(1, 1fr);
     }
-    footer{
-        margin: 0;
-        padding: 0;
+    .after-content{
+        order: 2;
+    }
+    .before-img{
+        margin-top: 20px;
+        order: 1;
     }
     .logo{
-        margin-top: 50px;
+        padding-top: 50px;
         width: 250px;
+    }
+    footer{
+        margin: 0;
+        margin-bottom: 50px;
     }
   }
   @media (max-width: 300px){
@@ -258,6 +278,4 @@ footer p{
       }
       /* iphon 5 font size */
   }
-  
-
-/* Media query end*/
+/* --------Media query End----------- */
